Changed images urls

--- a/blog2.html
+++ b/blog2.html
@@ -22,7 +22,7 @@
 </head>
 <body>
      <div id="pageloader" class="row m0">
-        <div class="loader-item"><img src="images/loader.gif" alt="loading"></div>
+        <div class="loader-item"><img src="images/loader.webp" alt="loading"></div>
     </div>  
     <section id="nr_topStrip" class="row">
         <div class="container">
