--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div id="pageloader" class="row m0">
-        <div class="loader-item"><img src="images/loader.gif" alt="loading"></div>
+        <div class="loader-item"><img src="images/loader.webp" alt="loading"></div>
     </div> 
    
     <header class="row">
@@ -253,7 +253,7 @@ in the global solar industry.</p>
                 <div class="owl-carousel testimonialSlider row m0">
                     <div class="item">
                         <div class="clientPhoto row m0">
-                            <img src="images/testimonial/photo.gif" alt="">
+                            <img src="images/testimonial/photo.png" alt="">
                         </div>
                         <div class="clientNameTitle row m0">Dr.Madhusudhan Gadge, HOD. & Principal at Sterling College</div>
                         <div class="arrow row m0">
@@ -263,7 +263,7 @@ in the global solar industry.</p>
                     </div>
                     <div class="item">
                         <div class="clientPhoto row m0">
-                            <img src="images/testimonial/photo_1.gif" alt="">
+                            <img src="images/testimonial/photo_1.png" alt="">
                         </div>
                         <div class="clientNameTitle row m0">Mr.Bhaskar Isame, Section Engineer at NMMC</div>
                         <div class="arrow row m0">
@@ -273,7 +273,7 @@ in the global solar industry.</p>
                     </div>
 					<div class="item">
                         <div class="clientPhoto row m0">
-                            <img src="images/testimonial/photo_2.gif" alt="">
+                            <img src="images/testimonial/photo_2.png" alt="">
                         </div>
                         <div class="clientNameTitle row m0">Mr.Rajesh Kulkarni, Head Sales & Marketing at Hensel</div>
                         <div class="arrow row m0">
@@ -283,7 +283,7 @@ in the global solar industry.</p>
                     </div>
 					<div class="item">
                         <div class="clientPhoto row m0">
-                            <img src="images/testimonial/photo_3.gif" alt="">
+                            <img src="images/testimonial/photo_3.png" alt="">
                         </div>
                         <div class="clientNameTitle row m0">Mr.Manish Bhanji, Managing Director at Jagat Creative Solutions Pvt. Ltd.</div>
                         <div class="arrow row m0">
@@ -293,7 +293,7 @@ in the global solar industry.</p>
                     </div>
 					<div class="item">
                         <div class="clientPhoto row m0">
-                            <img src="images/testimonial/photo_4.gif" alt="">
+                            <img src="images/testimonial/photo_4.png" alt="">
                         </div>
                         <div class="clientNameTitle row m0">Mr.Pranam Nagale, Manager at Infosys</div>
                         <div class="arrow row m0">
