--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@ fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script><!-- Your customer chat code -->
 <div class="fb-customerchat"
 attribution=setup_tool
-page_id="573535869683172"
+page_id="1465822786973665"
 theme_color="#67b868">
-</div><script src="js/script-min.js"></script>
+</div><script src="js/script-min.js" defer></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126263011-1"></script>
 <script>
