--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ fjs.parentNode.insertBefore(js, fjs);
 attribution=setup_tool
 page_id="1465822786973665"
 theme_color="#67b868">
-</div><script src="js/script-min.js" defer></script>
+</div><script src="js/script-min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126263011-1"></script>
 <script>
