--- a/about-us2.html
+++ b/about-us2.html
@@ -128,7 +128,7 @@
 <p><b style="font-size: x-large;color: #009100;">A</b>ARUSHEE Solar Energy LLP is a leading vertically integrated solution provider of photovoltaic (PV) products. AARUSHEE Solar manufacturing Solar Home Lightning systems, Solar Street light, solar water pump, charge controller unit and providing rooftop solar solutions for both on-grid and off-grid systems. AARUSHEE Solar has manufacturing facilities in Ratnagiri and Mumbai.<br /><br />In February, 2014, AARUSHEE Solar was registered in Mumbai. The company continued to expand new market through its high-performance and economical solutions. Our company keeps on its research and development of high-efficient products to proceed forward in the difficult situation.<br /><br />AARUSHEE Solar’s target is to be a leading enterprise in PV industry with key products and solutions. In the next 5 years, AARUSHEE Solar is transferred from “PV technology enterprise” into “new energy technology group”. The future of AARUSHEE Solar is to be a world class new energy leading enterprise with top brand reputation, top operation capability, top R&D capability and top industrial development ability.
 </p>
 </div>
-<div class="fleft aboutImg" style="padding-top:30px;">
+<div class="fleft aboutImg" style="padding-top:30px;padding-left:10px;">
 <img src="images/team/about-us.jpg" alt="" style="height:300px;">
 </div>
 </div>
