--- a/projects2.html
+++ b/projects2.html
@@ -4,7 +4,17 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Aarushee - Solar Energy Company</title>
+<title>Aarushee Solar - A Leading Solar Power Company in India</title>
+<meta name="description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states.">
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
+<meta property="og:description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
+<meta property="og:url" content="https://aarusheesolar.com/" />
+<meta property="og:site_name" content="Aarushee Solar" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
+<meta name="twitter:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
 <!--Favicons-->
 <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
