Added some meta tags

--- a/projects2.html
+++ b/projects2.html
@@ -10,9 +10,12 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
 <meta property="og:description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
-<meta property="og:url" content="https://aarusheesolar.com/" />
+<meta property="og:url" content="https://aarusheesolar.com" />
 <meta property="og:site_name" content="Aarushee Solar" />
-<meta name="twitter:card" content="summary" />
+<meta property="og:image" content="images/logo.png" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:url" content="https://aarusheesolar.com" />
+<meta name="twitter:site" content="@aarusheesolar"/><meta name="twitter:domain" content="aarusheesolar.com"/><meta name="twitter:image:src" content="images/logo.png"/>
 <meta name="twitter:description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
 <meta name="twitter:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
 <!--Favicons-->
@@ -52,7 +55,7 @@
 <div class="row">
 <div class="logo col-sm-6">
 <div class="row">
-<a href="index.html"><img src="images/logo.png" alt="Construction - Construction Company HTML Template"></a>
+<a href="/"><img src="images/logo.png" alt="Aarushee Solar Energy Company Logo"></a>
 </div>
 </div>
 <div class="social_nav col-sm-6">
@@ -83,44 +86,13 @@
 </div>
 <div class="collapse navbar-collapse" id="main_nav">
 <ul class="nav navbar-nav">
-<li><a href="index.html">Home</a></li>
-<!--<li class=" dropdown">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">about</a>
-<ul class="dropdown-menu" role="menu">
+<li><a href="/">Home</a></li>
 <li><a href="about-us2.html">About us</a></li>
-<li><a href="about-us.html">VMV</a></li>
-</ul>
-</li>-->
-<li><a href="about-us2.html">About us</a></li>
-<!--<li class=" dropdown">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">projects</a>
-<ul class="dropdown-menu" role="menu">
-<li><a href="projects_full.html">Full Width Projects</a></li>
-<li><a href="projects2.html">2 Collumn Projects</a></li>
-<li><a href="projects3.html">3 Collumn Projects</a></li>
-</ul>
-</li>-->
 <li class="active"><a href="projects2.html">Roof-top</a></li>
 <li><a href="projects3.html">Ground-mount</a></li>
 <li><a href="services.html">services</a></li>
 <li><a href="blog2.html">products</a></li>
-<!--<li class=" dropdown">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products</a>
-<ul class="dropdown-menu" role="menu">
-<li><a href="blog.html">Blog</a></li>
-<li><a href="blog2.html">Blog 2 Col</a></li>
-<li><a href="blog3.html">Blog 3 Col</a></li>
-<li><a href="single-post.html">Sinlge Post</a></li>
-</ul>
-</li> commented as drop down not needed-->
 <li><a href="contact2.html">contact</a></li>
-<!--<li class=" dropdown">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">contact</a>
-<ul class="dropdown-menu" role="menu">
-<li><a href="contact.html">Conact us</a></li>
-<li><a href="contact2.html">Conact us 2</a></li>
-</ul>
-</li>-->
 </ul>
 </div>
 </div>
@@ -128,12 +100,6 @@
 </nav> <!--Main Nav-->
 <section id="pageCover" class="row roofPage">        
 <div class="row pageTitle">Roof-top</div>
-<!--<div class="row pageBreadcrumbs">
-<ol class="breadcrumb">
-<li><a href="index.html">home</a></li>
-<li class="active">news</li>
-</ol>
-</div>-->
 </section>
 <section id="blogs" class="row">
 <div class="container">
