Changed logo image for fb card

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <meta property="og:description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
 <meta property="og:url" content="https://aarusheesolar.com" />
 <meta property="og:site_name" content="Aarushee Solar" />
-<meta property="og:image" content="https://aarusheesolar.com/images/logo.png" />
+<meta property="og:image" content="https://aarusheesolar.com/images/newlogo.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:url" content="https://aarusheesolar.com" />
-<meta name="twitter:site" content="@aarusheesolar"/><meta name="twitter:domain" content="aarusheesolar.com"/><meta name="twitter:image:src" content="https://aarusheesolar.com/images/logo.png"/>
+<meta name="twitter:site" content="@aarusheesolar"/><meta name="twitter:domain" content="aarusheesolar.com"/><meta name="twitter:image:src" content="https://aarusheesolar.com/images/newlogo.png"/>
 <meta name="twitter:description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
 <meta name="twitter:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
 <!--Favicons-->
